[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landuse_rb"
version = "0.0.1"
description = "A library for land use classification and spatial analysis"
authors = [
    { name="Roman Bashirov", email="bashiroff.roman@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"

dependencies = [
    "pandas",
    "geopandas",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    "matplotlib",
    "imbalanced-learn",
    "libpysal"
]

[project.urls]
Homepage = "https://github.com/romanroff/landuse-lib"
Repository = "https://github.com/romanroff/landuse-lib"
